[package]
name    = "ohkami-yew-todo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/server.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "front"
path = "src/front.rs"

[profile.release]
opt-level = "s"

[dependencies]
ohkami                   = { git = "https://github.com/kana-rus/ohkami.git", features = ["rt_worker"] }
worker                   = { version = "0.2.0" }
yew                      = { version = "0.21", features = ["csr"] }
web-sys                  = { version = "0.3",  features = ["Crypto"] }
thiserror                = { version = "1.0" }
reqwest                  = { version = "0.12", features = ["json"] }
console_error_panic_hook = { version = "0.1.7" }
